# app-store-connect-wrapper

./: .env.template  .gitignore  CONTRIBUTING.md  MIGRATION_NOTES.md  README.md  pyproject.toml  test_connection.py  test_real.py  update_localizations_fixed.py  update_subtitles.py
examples/: manage_categories.py  update_app_subtitles.py  update_version_localizations.py  upload_localized_icons.py
python/: README.md  pyproject.toml
python/app_store_connect/: __init__.py  auth.py  base.py  exceptions.py
python/app_store_connect/api/: __init__.py  apps.py  categories.py  media.py  versions.py
python/examples/: add_all_localizations.py  add_complete_spanish_localization.py  add_spanish_to_sleeploops.py  complete_missing_descriptions.py  manage_categories.py  sync_localizations.py  update_app_subtitles.py  update_failed_localizations.py  update_version_localizations.py  verify_localizations.py
python/tests/: __init__.py  test_auth.py  test_base.py  test_client.py  test_integration.py
rust/: Cargo.toml  README.md
rust/examples/: list_sleeploops_info.rs  sync_localizations.rs  test_connection.rs  update_sleeploops_localizations.rs
rust/src/: auth.rs  base.rs  client.rs  error.rs  lib.rs
rust/src/api/: apps.rs  localizations.rs  media.rs  versions.rs
src/api/: categories.rs
src/app_store_connect/: client.py
src/app_store_connect/api/: __init__.py  apps.py  localizations.py  media.py  versions.py
tests/: test_auth.py  test_base.py  test_client.py  test_integration.py
