[package]
name = "app-store-connect-rust"
version = "0.1.0"
edition = "2021"
authors = ["ebowwa <your-email@example.com>"]
description = "A comprehensive Rust wrapper for the App Store Connect API"
license = "MIT"
repository = "https://github.com/ebowwa/app-store-connect-wrapper"
readme = "README-rust.md"
keywords = ["app-store", "ios", "api", "apple", "connect"]
categories = ["api-bindings", "development-tools"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[[example]]
name = "sync_localizations"
path = "examples/sync_localizations.rs"

[lib]
name = "app_store_connect_rust"
path = "src/lib.rs"
